--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
     "minimum-stability": "dev",
     "support": {
         "issues": "https://www.drupal.org/project/issues/taxes",
-        "source": "http://cgit.drupalcode.org/taxes",
-    },
+        "source": "http://cgit.drupalcode.org/taxes"
+    }
 }
